Fixed negative time overflow

--- a/styles.less
+++ b/styles.less
@@ -97,10 +97,11 @@ section {
 .train time {
 	display: inline-block;
 	vertical-align: text-top;
-	width: 60px;
+	width: 50px;
+	margin-left: 10px;
 	text-align: right;
 	white-space: nowrap;
-	overflow: hidden;
+	overflow: visible;
 }
 
 .uptown .direction-icon {
